src/main/resources/static/styles.css
body {
    font-family: Arial, sans-serif;
    text-align: center;
    margin: 0;
    padding: 0;
}

.top-bar {
    display: flex;
    margin: 10px;
    width: 100%;
}

.top-bar .new-game-btn {
    padding: 0.375rem 0.75rem;
    line-height: 1.5;
    color: #fff;
    background-color: #007bff;
    border: 1px solid transparent;
    border-radius: 0.25rem;
    cursor: pointer;
}

.top-bar .info {
    width: 100%;
    text-align: right;
    margin-right: 30px;
}

#game-over {
    color: #ff0000;
    font-size: 1.5em;
    font-weight: bold;
}

.game {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

.game td {
    border: 1px solid #333;
    width: 50px;
    height: 50px;
    font-size: 18px;
    cursor: pointer;
}

.game form.cell-form {
    width: 100%;
    height: 100%;
}

.game button.cell-button {
    width: 100%;
    height: 100%;
    background-color: #f0f0f0;
    border: none;
    padding: 0;
}

.game .hidden-cell, .game .flag-cell {
    color: black;
}

.game .hidden-cell .cell-button, .game .flag-cell .cell-button {
    background-color: grey;
}

.game .bomb-cell, .game .number-cell {
    background-color: lightgrey;
    color: black;
}

.game .bomb-cell .cell-button {
    background-color: #ff0000;
}

